updateing ci file:Buld maven and test